manifests/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  ports:
  - port: 5000
  selector:
    app: flask-app
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: lekhana2004/flask-app
        ports:
        - containerPort: 5000
